--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 	<script type="text/javascript" src="http://code.jquery.com/jquery-2.1.4.js"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
+	<script type="text/javascript" src="js/jquery.inview.js"></script>
 	<script type="text/javascript" src="js/main.js"></script>
 </head>
 <body>                         
@@ -49,7 +50,7 @@
 				</nav>
 			</div>
 		</div>
-		<div class="container-fluid logo-block">			
+		<div class="container-fluid logo-block">		
 			<a href="index.html" class="logo">site</a>
 			<img class="shadow" src="images/logo-shadow.jpg" alt="image">
 		</div>
@@ -97,7 +98,7 @@
 				</p>
 				<div class="row">
 					<div class="col-lg-4 col-md-4 col-sm-4">
-						<figure class="sign">
+						<figure class="sign sign-left">
 						   <p>
 						   		<img src="images/img01.jpg" alt="image">
 							</p>
@@ -105,7 +106,7 @@
 						  </figure>
 					</div>
 					<div class="col-lg-4 col-md-4 col-sm-4">
-						<figure class="sign">
+						<figure class="sign sign-center">
 						   <p>
 						   		<img src="images/img02.jpg" alt="image">
 						   </p>
@@ -113,7 +114,7 @@
 						  </figure>
 					</div>
 					<div class="col-lg-4 col-md-4 col-sm-4">
-						<figure class="sign">
+						<figure class="sign sign-right">
 						   <p>
 							   <img src="images/img03.jpg" alt="image">
 						   </p>
